// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`progressbar fixed 1`] = `
Array [
  <progress
    className="progress"
    max="100"
    value="15"
  />,
  <progress
    className="progress is-primary"
    max="100"
    value="15"
  />,
  <progress
    className="progress is-link"
    max="100"
    value="30"
  />,
  <progress
    className="progress is-info"
    max="100"
    value="45"
  />,
  <progress
    className="progress"
    max="100"
    value="60"
  />,
  <progress
    className="progress is-warning"
    max="100"
    value="75"
  />,
  <progress
    className="progress is-danger"
    max="100"
    value="90"
  />,
]
`;

exports[`progressbar inderminate 1`] = `
Array [
  <progress
    className="progress is-small is-primary"
    max="100"
  />,
  <progress
    className="progress is-danger"
    max="100"
  />,
  <progress
    className="progress is-medium"
    max="100"
  />,
  <progress
    className="progress is-large is-info"
    max="100"
  />,
]
`;

exports[`progressbar sizes 1`] = `
Array [
  <progress
    className="progress is-small"
    max="100"
    value="15"
  />,
  <progress
    className="progress"
    max="100"
    value="30"
  />,
  <progress
    className="progress is-medium"
    max="100"
    value="45"
  />,
  <progress
    className="progress is-large"
    max="100"
    value="60"
  />,
]
`;
